# LitReviewer

./: .env.example  .gitignore  README.md  full startup sequence.txt
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  base.py
backend/app/agents/critic/: __init__.py  graph.py  nodes.py  prompts.py  schemas.py
backend/app/agents/factchecker/: __init__.py  graph.py  nodes.py  prompts.py  schemas.py
backend/app/agents/research/: __init__.py  graph.py  nodes.py  prompts.py  schemas.py
backend/app/agents/writer/: __init__.py  graph.py  nodes.py  prompts.py  schemas.py
backend/app/core/: __init__.py  exceptions.py  logging.py  middleware.py
backend/app/db/: __init__.py  models.py
backend/app/db/postgres/: __init__.py  engine.py  session.py
backend/app/db/qdrant/: __init__.py  client.py
backend/app/db/redis/: __init__.py  client.py
backend/app/features/: __init__.py
backend/app/features/health/: __init__.py  checks.py  router.py  schemas.py
backend/app/features/research/: router.py  schemas.py  service.py
backend/app/graph/: __init__.py  nodes.py  state.py  workflow.py
backend/app/llm/: __init__.py  base.py  client.py  exceptions.py  retry.py
backend/app/llm/providers/: __init__.py  anthropic.py  gemini.py  groq.py
backend/app/rag/: __init__.py  chunker.py  document_ingestion.py  embedder.py  ingestion.py  retriever.py  schemas.py
backend/app/rag/loaders/: __init__.py  base.py  markdown.py  pdf.py  text.py
backend/app/tools/: __init__.py  web_search.py
backend/eval/: __init__.py  cli.py  harness.py  judge.py  queries.json  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: c3e3a17b7348_create_initial_tables.py
docs/: PRD.md  folder-structure.md  system-design.md
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/layout/: AppHeader.tsx
frontend/src/components/report/: ReportSkeleton.tsx  ReportViewer.tsx
frontend/src/components/research/: AgentActivityFeed.tsx  ProcessPanel.tsx  ResearchInput.tsx  ResourceMap.tsx  SourceList.tsx
frontend/src/hooks/: useResearch.ts
frontend/src/lib/: api.ts  types.ts
infrastructure/: docker-compose.dev.yml  docker-compose.yml
infrastructure/postgres/: init.sql
(+1 files in other folders)
