[project]
name = "litreview-backend"
version = "0.1.0"
description = "LitReviewer — Multi-Agent Literature Review Platform for PhD Students"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Validation & config
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Structured logging
    "structlog>=24.4.0",
    # Database — PostgreSQL (async)
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Database — Qdrant vector store
    "qdrant-client>=1.12.0",
    # Database — Redis
    "redis[hiredis]>=5.2.0",
    # HTTP client (health checks, future integrations)
    "httpx>=0.28.0",
    # LLM — provider abstraction layer
    "langchain-core>=0.3.0",            # BaseChatModel, BaseMessage, UsageMetadata
    "langchain-anthropic>=0.3.0",       # ChatAnthropic (Claude via LangChain)
    "langchain-groq>=0.2.0",            # ChatGroq (Llama via Groq — primary provider)
    "tenacity>=9.0.0",                  # Retry with exponential backoff and jitter
    # Agent orchestration
    "langgraph>=0.2.0",                 # LangGraph state machine for multi-agent workflows
    "tavily-python>=0.5.0",             # Tavily web search API client
    # RAG — embeddings and text splitting
    "sentence-transformers>=3.0.0",     # BAAI/bge-large-en-v1.5 embedding model
    "langchain-text-splitters>=0.3.0",  # RecursiveCharacterTextSplitter
    "pypdf>=4.0.0",                     # Pure-Python PDF text extraction
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "migrations/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
